--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router": "^7.1.1",
     "sass": "^1.83.1",
     "sonner": "^1.7.2",
-    "three": "^0.172.0"
+    "three": "^0.172.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
