--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,10 +1,18 @@
 {
     "routes": [
-      {
-        "route": "/*",
-        "headers": {
-          "Content-Security-Policy": "default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';"
+        {
+            "route": "/*",
+            "headers": {
+                "Content-Security-Policy": "default-src 'self'; connect-src 'self' https://dotnet-fapp.azurewebsites.net; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';",
+                "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
+                "X-Content-Type-Options": "nosniff",
+                "X-Frame-Options": "DENY",
+                "Referrer-Policy": "no-referrer"
+            }
         }
-      }
-    ]
-  }
+    ],
+    "navigationFallback": {
+        "rewrite": "/index.html",
+        "exclude": ["/images/*", "/css/*"]
+    }
+}
