--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "three": "^0.172.0"
   },
     "engines": {
-    "node": ">=22.0.0"
+    "node": "22.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
