--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -14,5 +14,13 @@
     "navigationFallback": {
       "rewrite": "/index.html",
       "exclude": ["/images/*", "/css/*"]
+    },
+    "responseOverrides": {
+    "/*": {
+      "headers": {
+        "Cross-Origin-Opener-Policy": "same-origin",
+        "Cross-Origin-Embedder-Policy": "require-corp"
+      }
     }
+  }
   }
