--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,26 +1,20 @@
 {
-    "routes": [
-      {
-        "route": "/*",
-        "headers": {
-          "Content-Security-Policy": "default-src 'self' blob:; connect-src 'self' https://dotnet-fapp.azurewebsites.net https://athleticstorage.blob.core.windows.net; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';",
-          "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
-          "X-Content-Type-Options": "nosniff",
-          "X-Frame-Options": "DENY",
-          "Referrer-Policy": "no-referrer"
-        }
-      }
-    ],
-    "navigationFallback": {
-      "rewrite": "/index.html",
-      "exclude": ["/images/*", "/css/*"]
-    },
-    "responseOverrides": {
-    "/*": {
+  "routes": [
+    {
+      "route": "/*",
       "headers": {
+        "Content-Security-Policy": "default-src 'self' blob:; connect-src 'self' https://dotnet-fapp.azurewebsites.net https://athleticstorage.blob.core.windows.net; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline';",
+        "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
+        "X-Content-Type-Options": "nosniff",
+        "X-Frame-Options": "DENY",
+        "Referrer-Policy": "no-referrer",
         "Cross-Origin-Opener-Policy": "same-origin",
         "Cross-Origin-Embedder-Policy": "require-corp"
       }
     }
+  ],
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/images/*", "/css/*"]
   }
-  }
+}
