--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -3,7 +3,7 @@
     {
       "route": "/*",
       "headers": {
-        "Content-Security-Policy": "default-src 'self' blob:; connect-src 'self' https://dotnet-fapp.azurewebsites.net https://athleticstorage.blob.core.windows.net https://unpkg.com; script-src 'self' 'unsafe-eval' blob:; style-src 'self' 'unsafe-inline';",
+        "Content-Security-Policy": "default-src 'self' blob:; connect-src 'self' blob: https://dotnet-fapp.azurewebsites.net https://athleticstorage.blob.core.windows.net https://unpkg.com; script-src 'self' 'unsafe-eval' blob:; style-src 'self' 'unsafe-inline';",
         "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
         "X-Content-Type-Options": "nosniff",
         "X-Frame-Options": "DENY",
