--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -4,6 +4,10 @@
       "route": "/*",
       "headers": {
         "Content-Security-Policy": "default-src 'self' blob:; connect-src 'self' blob: https://dotnet-funcapp.azurewebsites.net https://athleticstorage.blob.core.windows.net https://unpkg.com https://www.gstatic.com; script-src 'self' 'unsafe-eval' blob: https://www.gstatic.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://www.gstatic.com;",
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+
         "Strict-Transport-Security": "max-age=31536000; includeSubDomains; preload",
         "X-Content-Type-Options": "nosniff",
         "X-Frame-Options": "DENY",
